# portco-monitoring

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
alembic/: env.py
alembic/versions/: 6cdac5af4e08_add_schedule_preferences.py  9296d4bbe254_initial_schema.py  a05f29076912_drop_article_analyses_table.py  b1c3a7f2e489_add_auth_tables.py
evals/: __init__.py
src/backend/: config.py  main.py  pipeline.py  scheduler.py  schemas.py
src/backend/api/: auth.py  digests.py  subscriptions.py
src/backend/database/: __init__.py  models.py  session.py
src/backend/prompts/: __init__.py  digest.py  synthesis.py
src/backend/services/: analysis.py  digest.py  email.py  enrichment.py  repository.py  search.py
src/frontend/: Dockerfile  package.json  pnpm-lock.yaml
src/frontend/app/: globals.css  layout.tsx  page.tsx
src/frontend/app/auth/verify/: page.tsx
src/frontend/app/dashboard/: page.tsx
src/frontend/app/digests/[id]/: page.tsx
src/frontend/components/: add-company-dialog.tsx  app-header.tsx  company-card.tsx  digest-list.tsx  digest-schedule-picker.tsx  fund-description-field.tsx  subscribe-form.tsx  subscription-settings.tsx  trigger-digest-button.tsx
src/frontend/lib/: api.ts  config.ts  hooks.ts  query-provider.tsx  subscription.ts
templates/: digest.html
tests/: __init__.py
