[project]
name = "portco-monitoring"
version = "0.1.0"
description = "PE Portfolio Company News Intelligence — automated weekly digests with PE-focused insights"
readme = "README.md"
authors = [
    { name = "guillaumedeshayes", email = "laurent.deshe15@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.15",
    "anthropic>=0.52",
    "exa-py>=1.9",
    "resend>=2.7",
    "apscheduler>=4.0.0a5",
    "jinja2>=3.1",
    "pydantic-settings>=2.8",
    "httpx>=0.28",
    "email-validator>=2.3.0",
    "tenacity>=9.1.4",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "backend"
